[package]
name = "rust-birkana"
version = "1.0.0"
authors = ["Nemec Lukas <lu.nemec@gmail.com>"]
description = "Creates Birkana rune symbols SVG representation of given hexadecimal number."
homepage = "https://github.com/lunemec/rust-birkana"
repository = "https://github.com/lunemec/rust-birkana"
readme = "README.md"
keywords = ["birkana", "svg"]
license = "Unlicense"

[dependencies]
svg = "0.5.3"
