cargo-features = ['edition']

[package]
edition = '2018'
name = "rust-birkana"
version = "1.1.2"
authors = ["Nemec Lukas <lu.nemec@gmail.com>"]
description = "Creates Birkana rune symbols SVG representation of given hexadecimal number."
homepage = "https://github.com/lunemec/rust-birkana"
repository = "https://github.com/lunemec/rust-birkana"
readme = "README.md"
keywords = ["birkana", "svg"]
license = "BSD-3-Clause"

[dependencies]
svg = "0.5.12"
